[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Yudi Liu <yudiliucn@gmail.com>"]
edition = "2024"

[lib]
path = "src/lib.rs"
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dev-dependencies]
reqwest = "0.11"

[dependencies]
actix-web = "4.12.1"
tokio = {version = "1.49.0", features = ["full"]}
